--- a/exp_synthetic_data/policy_evaluation.ipynb
+++ b/exp_synthetic_data/policy_evaluation.ipynb
@@ -114,12 +114,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14187b31-ccfd-4296-bc50-73090d4eedc5",
-   "metadata": {},
+   "id": "d01f4a04-2ce1-44e5-a78d-bf5234405aec",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Optimal Bandwidth\n",
-    "* section3.2のTheorem2を利用する。\n",
-    "$$\n",
+    "* section3.2のTheorem2を利用する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0c91bf-1135-4914-8fd5-c1f3b91e0683",
+   "metadata": {},
+   "source": [
+    "$\n",
     "h^{*} = \\left(\n",
     "    \\frac{\n",
     "        R(K) \\mathbb{E}\\left[\\mathbb{E}[Y^2|\\tau(X), X]/f_{T|X}(\\tau(X), X)\\right]\n",
@@ -129,7 +138,14 @@
     "        \\right)^2 n\n",
     "    }\n",
     "\\right)^{\\frac{1}{5}}\n",
-    "$$\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12cf9a2f-aed5-4394-8577-0fffa62c7d53",
+   "metadata": {},
+   "source": [
     "* section5.1によれば、2次の微分係数や積分は数値微分, 数値積分を用いる。ここでは、numpy.gradient(y, dx), scipy.integrate.simps(y, x)を利用する。\n",
     "    * [scipy.integrate.simps](https://qiita.com/sci_Haru/items/09279cf81b9b073afa1d)"
    ]
